--- a/source/Maestro.Wpf/Views/MaestroView.xaml
+++ b/source/Maestro.Wpf/Views/MaestroView.xaml
@@ -30,6 +30,7 @@
             <converters:TotalSecondsConverter x:Key="TotalSecondsConverter" />
             <converters:RunwaysToLadderTitleConverter x:Key="RunwaysToLadderTitleConverter" />
             <converters:FeederFixesToLadderTitleConverter x:Key="FeederFixesToLadderTitleConverter" />
+            <converters:HasItemsConverter x:Key="HasItemsConverter" />
 
             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBaseStyle}" />
             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBaseStyle}" />
@@ -179,15 +180,25 @@
             Orientation="Horizontal"
             Margin="2">
             <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBaseStyle}">
+                <Style x:Key="TabBarButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBaseStyle}">
                     <Setter Property="Margin" Value="0,0,2,0"/>
                     <Setter Property="Width" Value="48" />
                 </Style>
             </StackPanel.Resources>
             
-            <Button Content="DEPS" IsEnabled="False" />
-            <Button Content="COORD" IsEnabled="False" />
-            <Button Content="DESQ" IsEnabled="False" />
+            <Button Content="DEPS" IsEnabled="False" Style="{StaticResource TabBarButtonStyle}"/>
+            <Button Content="COORD" IsEnabled="False" Style="{StaticResource TabBarButtonStyle}" />
+            <Button Content="DESQ" IsEnabled="True" Command="{Binding OpenDesequencedWindowCommand}">
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource TabBarButtonStyle}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Desequenced, Converter={StaticResource HasItemsConverter}}" Value="True">
+                                <Setter Property="Foreground" Value="White" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
 
             <ItemsControl ItemsSource="{Binding SelectedAirport.Views}" Name="SectorList">
                 <ItemsControl.Resources>
